Compiler/tests/good/set3.nx
type t = [-5 .. 0];
