Compiler/tests/bad/set4.nx
type t = [-5 .. -5];
